# focus

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: rust_ci.yml  unit_tests_ci.yml
.zed/: settings.json  tasks.json
focus/: Cargo.toml
focus/src/drivers/: spi_peripheral.rs
focus/src/hardware/: button.rs  screen.rs  spi_bus.rs
hl_driver/: Cargo.toml
hl_driver/src/: debounce.rs  encoder.rs  lib.rs  switch.rs  test_utils.rs
scripts/: build_debug.sh  build_flash_monitor.sh  build_release.sh
src/: drivers.rs  hardware.rs  lib.rs  spi_device_wrapper.rs
src/drivers/: rotary_encoder.rs
src/hardware/: button.rs  rotary_encoder.rs  screen.rs  spi_bus.rs
