[workspace]
resolver = "3"
members = [ "focus", "hl_driver"]


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
overflow-checks = true

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
